# claude-panel

./: .gitignore  .npmignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  package-lock.json  package.json  pyproject.toml
backend/: pyproject.toml
backend/ccm/: config.py  dependencies.py  main.py
backend/ccm/models/: __init__.py  ccr.py  claude_json.py  claude_md.py  commands.py  common.py  dashboard.py  instances.py  marketplace.py  mcp.py  scanner.py  skill_providers.py
backend/ccm/routers/: ccr.py  claude_md.py  commands.py  config_bundle.py  dashboard.py  health.py  instances.py  marketplace.py  mcp.py  plugins.py  settings.py  skill_providers.py  visibility.py
backend/ccm/services/: backup.py  ccr_service.py  claude_json_service.py  claude_md_drift_service.py  claude_md_service.py  command_service.py  config_bundle_service.py  instance_service.py  marketplace_service.py  mcp_health_service.py  mcp_service.py  plugin_service.py  provider_provenance_service.py  scanner.py  settings_service.py  skill_index_service.py  (+4 more)
backend/claude_panel/: config.py  dependencies.py  main.py
backend/tests/: conftest.py  test_agent_service.py  test_api_routes.py  test_ccr_service.py  test_claude_json_service.py  test_claude_md_service.py  test_command_service.py  test_config_bundle_service.py  test_instance_service.py  test_instance_transfer_service.py  test_mcp_diagnostics_service.py  test_mcp_service.py  test_plugin_service.py  test_scanner.py  test_settings_service.py  test_skill_provider_provenance.py  test_visibility_service.py
(+164 files in other folders)
