[project]
name = "ccm-backend"
version = "1.0.0"
description = "Claude Code Configuration Manager - Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["ccm"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
