[project]
name = "claudeboard-backend"
version = "1.5.0"
description = "ClaudeBoard - Dashboard & Control Panel for Claude Code"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "httpx>=0.27"]

[tool.hatch.build.targets.wheel]
packages = ["ccm"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
