[project]
name = "claude-panel-backend"
version = "1.5.0"
description = "Claude Panel - Dashboard & Control Panel for Claude Code"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["claude_panel"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
